Let go of root quickly, and listen instead of guessing
The quick panel asked for something, waited a moment and then painted
whatever it found - so Bluetooth stayed grey until the panel was closed
and opened again, and play/pause showed the state from before the press.
Nothing was wrong with the commands; they simply return before the thing
they asked for has happened. The panel now listens, and looks again over
the seconds a radio takes to come up. Bluetooth's own broadcast is only
delivered to apps holding BLUETOOTH_CONNECT, which this launcher does not
have, so reading the state - which needs no permission - is what settles
it.

Root is one process per command now, drained on a thread of its own so a
full pipe cannot stop it exiting, bounded at 45s for the first ask and 20s
after that, and never queued: a second request while one is in flight is
dropped, and the caller is told that it was dropped rather than being told
root is missing. A wait that goes nowhere buys thirty quiet seconds
instead of costing the device its root for good. There is a Use root
setting, on by default, that turns the whole path off without a rebuild.

Both overlay windows were full-screen, which is why the panel ate every
touch on the display while it was open. They are the size of their own
content now, with NOT_TOUCH_MODAL, so a press beside them reaches the
desktop and still closes them - and, being small, they can finally ask for
a blur behind without blurring the whole screen. They sit flush on the bar
too: the gap came from measuring the drag layer, which reserves room for
the stashed handle, instead of asking the visible row where it is on
screen.

Brightness is gone. It moves the tablet's own backlight, which is not the
screen you are looking at. In its place is an eye-protection toggle that
finds whichever setting this firmware actually uses and says so in the
log. The clock and the date are centred on the line the icons sit on, the
navigation glyphs are lifted off the dark glass